--- a/config/includes/behaviors.dtsi
+++ b/config/includes/behaviors.dtsi
@@ -10,7 +10,7 @@
             tapping-term-ms = <280>;
             quick-tap-ms = <175>;
             bindings = <&kp>, <&kp>;
-            hold-trigger-key-positions = < 5 6 7 8 9 15 16 17 18 19 25 26 27 28 29 >; // List of keys on the right side of the keyboard
+            hold-trigger-key-positions = < 5 6 7 8 9 15 16 17 18 19 25 26 27 28 29 32 33>; // List of keys on the right side of the keyboard
             hold-trigger-on-release;
         };
 
@@ -22,7 +22,7 @@
             tapping-term-ms = <280>;
             quick-tap-ms = <175>;
             bindings = <&kp>, <&kp>;
-            hold-trigger-key-positions = < 0 1 2 3 4 10 11 12 13 14 20 24 22 23 24 >; // List of keys on the left side of the keyboard
+            hold-trigger-key-positions = < 0 1 2 3 4 10 11 12 13 14 20 24 22 23 24 30 31>; // List of keys on the left side of the keyboard
             hold-trigger-on-release;
         };
 
