--- a/build.yaml
+++ b/build.yaml
@@ -19,11 +19,11 @@
 #
 ---
 include:
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: cradio_dongle
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: cradio_left
     cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: cradio_right
     cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
