--- a/build.yaml
+++ b/build.yaml
@@ -21,6 +21,8 @@
 include:
   - board: nice_nano_v2
     shield: cradio_dongle
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano_v2
     shield: cradio_left
     cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
